@@ -14,7 +14,7 @@ fim_var_help_db[FIM_VID_SANITY_CHECK]= "[internal,in,experimental] if 1, will ex
 fim_var_help_db[FIM_VID_LAST_SYSTEM_OUTPUT]= "[internal,out,experimental] the standard output of the last call to the system command" ;
 fim_var_help_db[FIM_VID_LOAD_DEFAULT_ETC_FIMRC]= "[internal,in] if 1 at startup, will load the system wide initialization file" ;
 fim_var_help_db[FIM_VID_DEFAULT_ETC_FIMRC]= "[internal,in] string with the global configuration file name" ;
-fim_var_help_db[FIM_VID_FILE_LOADER]= "[in] if not empty, this string will force a file loader (among the ones listed in the -V switch output)" ;
+fim_var_help_db[FIM_VID_FILE_LOADER]= "[in] if not empty, this string will force a file loader (among the ones listed in the -V switch output); [out] i:" FIM_VID_FILE_LOADER " stores the loader of the current image" ;
 fim_var_help_db[FIM_VID_RETRY_LOADER_PROBE]= "[in] if 1 and user specified a file loader and this fails, will probe for a different loader" ;
 fim_var_help_db[FIM_VID_NO_RC_FILE]= "[internal,in] if 1, the ~/.fimrc file will not be loaded at startup" ;
 fim_var_help_db[FIM_VID_NO_EXTERNAL_LOADERS]= "[internal,in] if 1, no external loading programs will be tried for piping in an unsupported type image file" ;
@@ -86,7 +86,7 @@ fim_var_help_db[FIM_VID_SHEIGHT]= "[internal,out] the current image scaled heigh
 fim_var_help_db[FIM_VID_AUTOFLIP]= "[internal,in] if 1, will flip images by default" ;
 fim_var_help_db[FIM_VID_AUTONEGATE]= "[internal,in] if 1, will negate images by default" ;
 fim_var_help_db[FIM_VID_AUTODESATURATE]= "[internal,in] if 1, will desaturate images by default" ;
-fim_var_help_db[FIM_VID_LAST_FILE_LOADER]= "[internal,out] string identifying the last file loader which has loaded an image" ;
+fim_var_help_db[FIM_VID_LAST_FILE_LOADER]= "[internal,out] after each image load, " FIM_VID_LAST_FILE_LOADER " will be set to the last file loader used" ;
 fim_var_help_db[FIM_VID_FLIPPED]= "[internal,out] 1, if the image is flipped" ;
 fim_var_help_db[FIM_VID_NEGATED]= "[internal,out] 1, if the image is negated" ;
 fim_var_help_db[FIM_VID_DESATURATED]= "[internal,out] 1, if the image is desaturated" ;
