@@ -62,6 +62,7 @@
  * Pause and Menu keys are now available in -o sdl mode (r776*)
  * added  list 'marked'  to show the list of marked files (r780*)
  * key Del bound to pop the current image from the list (r782*)
+ * i:_file loader will store the used loader string (r784*)
 
                 Version 0.4
 
